argocd/k8s/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: game-2048.stilo.ca
spec:
  selector:
    app: nginx
    app.kubernetes.io/name: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
